File Layouts, some design

--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -3,48 +3,59 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/main"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/btn_logout"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:text="Logout"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/lavender"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/relativeLayout" />
+        app:logo="@drawable/viammlogo_sub"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:title="Dashboard"
+        tools:layout_editor_absoluteX="1dp" />
+
 
     <RelativeLayout
         android:id="@+id/relativeLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/btn_logout"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
         <Button
             android:id="@+id/btn_order"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:padding="30dp"
             android:text="Orders"
-            android:textSize="20sp"
-            android:padding="30dp"/>
+            android:textSize="20sp" />
 
         <Button
             android:id="@+id/btn_record"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Records"
-            android:textSize="20sp"
-            android:padding="30dp"
             android:layout_below="@+id/btn_order"
-            android:layout_marginTop="8dp"/>
+            android:layout_marginTop="8dp"
+            android:padding="30dp"
+            android:text="Records"
+            android:textSize="20sp" />
+
+        <Button
+            android:id="@+id/btn_statistics"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/btn_record"
+            android:layout_marginTop="8dp"
+            android:padding="30dp"
+            android:text="Statistics"
+            android:textSize="20sp" />
 
     </RelativeLayout>
 
