--- a/app/src/main/res/layout/activity_edit_order.xml
+++ b/app/src/main/res/layout/activity_edit_order.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -20,133 +21,147 @@
         app:contentInsetStart="0dp"
         app:contentInsetEnd="0dp" />
 
-    <RelativeLayout
-        android:id="@+id/RLEditOrder"
-        android:layout_width="358dp"
-        android:layout_height="347dp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/innerLayout"
+        android:layout_width="363dp"
+        android:layout_height="589dp"
         android:layout_margin="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        app:layout_constraintVertical_bias="0.554">
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintVertical_bias="0.349">
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/textOrder"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
             android:layout_marginStart="39dp"
             android:layout_marginTop="32dp"
             android:text="Order ID:"
             android:textColor="@android:color/black"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tvOrderID"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
             android:layout_marginStart="20dp"
             android:layout_marginTop="33dp"
-            android:layout_toEndOf="@+id/textView4"
             android:textColor="@android:color/black"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            app:layout_constraintStart_toEndOf="@id/textOrder"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView"
-            android:layout_width="58dp"
+            android:id="@+id/textStatus"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tvOrderID"
-            android:layout_alignParentStart="true"
             android:layout_marginStart="52dp"
             android:layout_marginTop="16dp"
             android:text="Status: "
             android:textColor="@android:color/black"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvOrderID" />
 
         <Spinner
             android:id="@+id/spOrderStatus"
             android:layout_width="180dp"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tvOrderID"
             android:layout_marginStart="15dp"
             android:layout_marginTop="17dp"
-            android:layout_toEndOf="@+id/textView" />
+            app:layout_constraintStart_toEndOf="@id/textStatus"
+            app:layout_constraintTop_toBottomOf="@id/tvOrderID" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/TextService"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/textView"
-            android:layout_alignParentStart="true"
             android:layout_marginStart="4dp"
             android:layout_marginTop="26dp"
             android:text="Service Type:"
             android:textColor="@android:color/black"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/textStatus" />
 
         <EditText
             android:id="@+id/ETOrderService"
             android:layout_width="180dp"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/spOrderStatus"
             android:layout_marginStart="15dp"
             android:layout_marginTop="16dp"
-            android:layout_toEndOf="@+id/textView2"
             android:hint="Ordered Service"
-            android:text="Service Type" />
+            android:text="Service Type"
+            app:layout_constraintStart_toEndOf="@id/TextService"
+            app:layout_constraintTop_toBottomOf="@id/spOrderStatus" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/textEmployee"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/ETOrderService"
-            android:layout_alignParentStart="true"
             android:layout_marginStart="26dp"
             android:layout_marginTop="18dp"
             android:text="Employee:"
             android:textColor="@android:color/black"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/ETOrderService" />
 
         <EditText
             android:id="@+id/ETOrderEmpName"
             android:layout_width="180dp"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/ETOrderService"
             android:layout_marginStart="15dp"
             android:layout_marginTop="8dp"
-            android:layout_toEndOf="@+id/textView3"
             android:hint="Employee Name"
-            android:text="Employee In Charge" />
+            android:text="Employee In Charge"
+            app:layout_constraintStart_toEndOf="@id/textEmployee"
+            app:layout_constraintTop_toBottomOf="@id/ETOrderService" />
+
 
         <Button
-            android:id="@+id/btnOrderDelete"
-            android:layout_width="115dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/ETOrderEmpName"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="25dp"
-            android:backgroundTint="@color/red"
-            android:text="Delete" />
+            android:id="@+id/btnOrderPayment"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:layout_marginTop="84dp"
+            android:backgroundTint="@color/green"
+            android:text="Proceed to Payment"
+            android:textColor="@color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.571"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/ETOrderEmpName" />
 
         <Button
-            android:id="@+id/btnOrderEdit"
-            android:layout_width="115dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/ETOrderEmpName"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="60dp"
-            android:layout_marginTop="26dp"
-            android:layout_marginEnd="10dp"
-
+            android:id="@+id/btnCancelOrder"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:layout_marginTop="16dp"
             android:backgroundTint="@color/bluegreen"
-            android:text="Edit" />
+            android:text="Cancel Order"
+            android:textColor="@color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/btnOrderPayment" />
 
+        <Button
+            android:id="@+id/btnOrderBack"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:layout_marginTop="16dp"
+            android:backgroundTint="@color/red"
+            android:text="Back"
+            android:textColor="@color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.571"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/btnCancelOrder" />
 
-    </RelativeLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
