--- a/app/src/main/res/layout/activity_edit_order.xml
+++ b/app/src/main/res/layout/activity_edit_order.xml
@@ -6,7 +6,9 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EditOrderActivity">
+    tools:context=".EditOrderActivity"
+    android:background="@drawable/viamm_bg"
+    >
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
