--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -6,7 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/main"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@drawable/viamm_bg"
+    >
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -15,7 +17,7 @@
         android:background="@color/lavender"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:layout_constraintTop_toTopOf="parent"
-        app:logo="@drawable/viammlogo_sub"
+        app:logo="@drawable/leaf"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         app:title="Dashboard"
         tools:layout_editor_absoluteX="1dp" />
