--- a/app/src/main/res/layout-land/activity_order.xml
+++ b/app/src/main/res/layout-land/activity_order.xml
@@ -6,7 +6,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".OrderActivity">
+    tools:context=".OrderActivity"
+    android:background="@drawable/viamm_bg"
+    >
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
