--- a/app/src/main/res/layout-land/activity_scanner.xml
+++ b/app/src/main/res/layout-land/activity_scanner.xml
@@ -5,6 +5,23 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ScannerActivity">
+    tools:context=".ScannerActivity"
+    android:background="@drawable/viamm_bg"
+    >
+
+    <RelativeLayout
+        android:id="@+id/relativeLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <TextView
+            android:id="@+id/textViewCentered"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Scanner Activity"
+            android:layout_centerInParent="true" />
+
+    </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
