--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/main"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@drawable/viamm_bg"
+    >
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
