--- a/app/src/main/res/layout/activity_scanner.xml
+++ b/app/src/main/res/layout/activity_scanner.xml
@@ -5,7 +5,9 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ScannerActivity">
+    tools:context=".ScannerActivity"
+    android:background="@drawable/viamm_bg"
+    >
 
     <RelativeLayout
         android:id="@+id/relativeLayout"
