--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,9 @@
     <color name="red">#FF4B4B</color>
     <color name="green">#FF00FF00</color>
     <color name="bluegreen">#78F6F6</color>
-    <color name="lavender">#8080DC</color>"
+    <color name="lavender">#8080DC</color>
+
+<!--    Toolbar colors-->
+    <color name="toolbarColor">#7f421f</color>
 
 </resources>
