--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
 
 <!--    Toolbar colors-->
     <color name="toolbarColor">#7f421f</color>
+    <color name="APpColor">#7f421f</color>
 
 </resources>
