--- a/app/src/main/res/layout/activity_edit_order.xml
+++ b/app/src/main/res/layout/activity_edit_order.xml
@@ -6,9 +6,8 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EditOrderActivity"
     android:background="@drawable/viamm_bg"
-    >
+    tools:context=".EditOrderActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -16,31 +15,31 @@
         android:layout_height="?attr/actionBarSize"
         android:background="@color/toolbarColor"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:contentInsetEnd="0dp"
+        app:contentInsetStart="0dp"
+        app:contentInsetStartWithNavigation="0dp"
         app:layout_constraintTop_toTopOf="parent"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        app:title="Edit Order"
-        app:contentInsetStartWithNavigation="0dp"
-        app:contentInsetStart="0dp"
-        app:contentInsetEnd="0dp" />
+        app:title="Edit Order" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/innerLayout"
-        android:layout_width="363dp"
-        android:layout_height="589dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_margin="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
-        app:layout_constraintVertical_bias="0.372">
+        app:layout_constraintVertical_bias="0.0">
 
         <TextView
             android:id="@+id/textOrder"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="39dp"
-            android:layout_marginTop="32dp"
-            android:text="Order ID:"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="16dp"
+            android:text="Booking Number:"
             android:textColor="@android:color/black"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -50,8 +49,8 @@
             android:id="@+id/tvOrderID"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="33dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
             android:textColor="@android:color/black"
             android:textSize="18sp"
             app:layout_constraintStart_toEndOf="@id/textOrder"
@@ -61,107 +60,142 @@
             android:id="@+id/textStatus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="52dp"
-            android:layout_marginTop="16dp"
-            android:text="Status: "
-            android:textColor="@android:color/black"
-            android:textSize="18sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvOrderID" />
-
-        <Spinner
-            android:id="@+id/spOrderStatus"
-            android:layout_width="180dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="17dp"
-            app:layout_constraintStart_toEndOf="@id/textStatus"
-            app:layout_constraintTop_toBottomOf="@id/tvOrderID" />
-
-        <TextView
-            android:id="@+id/TextService"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
-            android:layout_marginTop="26dp"
-            android:text="Service Type:"
+            android:layout_marginTop="8dp"
+            android:text="Status:"
             android:textColor="@android:color/black"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textStatus" />
-
-        <EditText
-            android:id="@+id/ETOrderService"
-            android:layout_width="180dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="16dp"
-            android:hint="Ordered Service"
-            android:text="Service Type"
-            app:layout_constraintStart_toEndOf="@id/TextService"
-            app:layout_constraintTop_toBottomOf="@id/spOrderStatus" />
+            app:layout_constraintTop_toBottomOf="@id/textOrder" />
 
         <TextView
-            android:id="@+id/textEmployee"
+            android:id="@+id/tvOrderStatus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="26dp"
-            android:layout_marginTop="18dp"
-            android:text="Employee:"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:textColor="@android:color/black"
+            android:textSize="18sp"
+            app:layout_constraintStart_toEndOf="@id/textStatus"
+            app:layout_constraintTop_toBottomOf="@id/textOrder" />
+
+        <ScrollView
+            android:id="@+id/sv_tbl"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@id/tvOrderStatus"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/textCost">
+
+            <TableLayout
+                android:id="@+id/tblOrder"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="8dp">
+
+                <!-- Header row -->
+                <TableRow android:background="@android:color/white">
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:padding="4dp"
+                        android:text="Amount"
+                        android:textColor="@android:color/black"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
+                        android:padding="4dp"
+                        android:text="Service"
+                        android:textColor="@android:color/black"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:padding="4dp"
+                        android:text="Price"
+                        android:textColor="@android:color/black"
+                        android:textStyle="bold" />
+
+                </TableRow>
+
+                <!-- Add more rows dynamically as needed -->
+
+            </TableLayout>
+        </ScrollView>
+
+        <TextView
+            android:id="@+id/textCost"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="4dp"
+            android:text="Total Amount:"
             android:textColor="@android:color/black"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/ETOrderService" />
+            app:layout_constraintTop_toBottomOf="@id/sv_tbl" />
 
-        <EditText
-            android:id="@+id/ETOrderEmpName"
-            android:layout_width="180dp"
+        <TextView
+            android:id="@+id/tvTotalCost"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="8dp"
-            android:hint="Employee Name"
-            android:text="Employee In Charge"
-            app:layout_constraintStart_toEndOf="@id/textEmployee"
-            app:layout_constraintTop_toBottomOf="@id/ETOrderService" />
-
+            android:layout_marginStart="156dp"
+            android:layout_marginTop="4dp"
+            android:textColor="@android:color/black"
+            android:textSize="18sp"
+            app:layout_constraintStart_toEndOf="@id/textCost"
+            app:layout_constraintTop_toBottomOf="@id/sv_tbl" />
 
         <Button
             android:id="@+id/btnOrderPayment"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="80dp"
-            android:layout_marginTop="84dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
             android:backgroundTint="@color/green"
             android:text="Proceed to Payment"
             android:textColor="@color/white"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.571"
+            app:layout_constraintTop_toBottomOf="@id/tvTotalCost"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/ETOrderEmpName" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/btnCancelOrder" />
 
         <Button
             android:id="@+id/btnCancelOrder"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="80dp"
-            android:layout_marginTop="16dp"
-            android:backgroundTint="@color/bluegreen"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:backgroundTint="@color/red"
             android:text="Cancel Order"
             android:textColor="@color/white"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/btnOrderPayment"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btnOrderPayment" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/btnOrderBack" />
 
         <Button
             android:id="@+id/btnOrderBack"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="80dp"
-            android:layout_marginTop="16dp"
-            android:backgroundTint="@color/red"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:backgroundTint="@color/bluegreen"
             android:text="Back"
             android:textColor="@color/white"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.571"
+            app:layout_constraintTop_toBottomOf="@id/btnCancelOrder"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btnCancelOrder" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
