Order Record Layout Issues

--- a/app/src/main/res/layout-land/activity_edit_order.xml
+++ b/app/src/main/res/layout-land/activity_edit_order.xml
@@ -7,7 +7,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/viamm_bg"
-    tools:context=".EditOrderActivity">
+    tools:context=".EditOrderActivity"
+    >
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
