--- a/app/src/main/res/layout-land/activity_edit_record.xml
+++ b/app/src/main/res/layout-land/activity_edit_record.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/editrecord"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/viamm_bg"
@@ -13,7 +13,7 @@
         android:id="@+id/toolbar"
         android:layout_width="0dp"
         android:layout_height="?attr/actionBarSize"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="36dp"
         android:background="@color/toolbarColor"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:contentInsetEnd="0dp"
